manifests/cluster-addons/audiobookshelf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audiobookshelf
  namespace: audiobookshelf
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      containers:
      - name: audiobookshelf
        image: ghcr.io/advplyr/audiobookshelf:latest
        ports:
        - containerPort: 13378
          name: http
        readinessProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 13378
          timeoutSeconds: 1
        startupProbe:
          failureThreshold: 30
          periodSeconds: 5
          successThreshold: 1
          tcpSocket:
            port: 13378
          timeoutSeconds: 1
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /metadata
          name: metadata
        - mountPath: /podcasts
          name: podcasts
        - mountPath: /audiobooks
          name: audiobooks
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: audiobookshelf-config
      - name: metadata
        persistentVolumeClaim:
          claimName: audiobookshelf-metadata
      - name: podcasts
        persistentVolumeClaim:
          claimName: audiobookshelf-podcasts
      - name: audiobooks
        persistentVolumeClaim:
          claimName: audiobookshelf-audiobooks
