manifests/cluster-addons/audiobookshelf/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf
  namespace: audiobookshelf
spec:
  ports:
    - port: 80
      targetPort: 80
