manifests/cluster-addons/audiobookshelf/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audiobookshelf
  namespace: audiobookshelf
  annotations:
    tailscale.com/tags: 'tag:k8s,tag:media'
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - backend:
              service:
                name: audiobookshelf
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - audiobookshelf
