manifests/cluster-addons/audiobookshelf/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: audiobookshelf
  namespace: audiobookshelf
spec:
  endpointSelector: {}

  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: tailscale
            tailscale.com/parent-resource: audiobookshelf
            tailscale.com/parent-resource-ns: audiobookshelf
      toPorts:
        - ports:
            - port: '80'
              protocol: TCP

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY
          rules:
            dns:
              - matchPattern: '*'

    - toFQDNs:
        - matchName: 'www.podtrac.com'
        - matchName: 'pdst.fm'
        - matchName: 'claritaspod.com'
        - matchName: 'verifi.podscribe.com'
        - matchName: 'tracking.swap.fm'
        - matchPattern: '*.megaphone.fm'
      toPorts:
        - ports:
            - port: '443'
              protocol: TCP
